--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,139 @@
+/* stylelint-disable liberty/use-logical-spec */
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+    --border-radius: var(--mui-shape-borderRadius);
+    --border-color: var(--mui-palette-divider);
+    --primary-color: var(--mui-palette-primary-main);
+    --background-color: var(--mui-palette-background-default);
+    --background-color-rgb: var(--mui-palette-background-paperChannel);
+    --header-height: 54px;
+    --header-z-index: var(--mui-zIndex-appBar);
+    --footer-z-index: 10;
+    --customizer-z-index: var(--mui-zIndex-drawer);
+    --search-z-index: var(--mui-zIndex-tooltip);
+    --drawer-z-index: var(--mui-zIndex-drawer);
+    --backdrop-color: rgb(var(--mui-mainColorChannels-light) / 0.5);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+[data-mui-color-scheme="dark"] {
+    --backdrop-color: rgb(23 25 37 / 0.6);
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+*,
+::before,
+::after {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    border-width: 0;
+    border-style: solid;
+    border-color: theme("borderColor.DEFAULT", currentColor);
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+*::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+*::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px #e7e8ff;
+    border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #474aa6;
+    border-radius: 10px;
+}
+
+html {
+    display: flex;
+    inline-size: 100%;
+    min-block-size: 100%;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+ul:not([class]) {
+    margin-block: 1rem;
+    padding-inline-start: 40px;
+}
+
+/*! Do note remove following style */
+/*
+  Fix the popout / submenu closing issue when using hover trigger to open the menu and using
+  perfectscrollbar where the bridge create with safe polygon by floating ui was not working
+*/
+[data-floating-ui-safe-polygon] .scrollbar-container {
+    pointer-events: auto;
+}
+[data-floating-ui-safe-polygon] .scrollbar-container .ps__rail-y {
+    pointer-events: none;
+}
+
+.ps__rail-y {
+    inset-inline-end: 0 !important;
+    inset-inline-start: auto !important;
+    & .ps__thumb-y {
+        inset-inline-end: 3px !important;
+        inset-inline-start: auto !important;
+        background-color: var(--mui-palette-divider);
+        inline-size: 6px;
+        &:hover,
+        &:focus,
+        &.ps--clicking {
+            background-color: var(--mui-palette-action-disabled) !important;
+        }
+    }
+    &:hover,
+    &:focus,
+    &.ps--clicking {
+        background-color: var(--mui-palette-action-hover) !important;
+    }
+    &:hover,
+    &:focus,
+    &.ps--clicking {
+        .ps__thumb-y {
+            background-color: var(--mui-palette-action-disabled) !important;
+        }
+    }
+}
+
+.ts-vertical-nav-root {
+    .ps__thumb-y {
+        inline-size: 4px;
+        &:hover,
+        &:focus,
+        &.ps--clicking {
+            inline-size: 6px;
+        }
+    }
+    .ps__rail-y {
+        inline-size: 10px;
+        &:hover,
+        &:focus,
+        &.ps--clicking {
+            background-color: transparent !important;
+            .ps__thumb-y {
+                inline-size: 6px;
+            }
+        }
+    }
+}
+
+:where([class^="tabler-"]) {
+    font-size: 1.5rem;
+}
+
+code {
+    font-family: inherit;
+    padding-block: 2px;
+    padding-inline: 4px;
+    border-radius: 4px;
+    font-size: 90%;
+    color: var(--mui-palette-info-main);
+    background-color: rgb(var(--mui-palette-info-mainChannel) / 0.08);
+    border: 0;
 }
