--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@
     --search-z-index: var(--mui-zIndex-tooltip);
     --drawer-z-index: var(--mui-zIndex-drawer);
     --backdrop-color: rgb(var(--mui-mainColorChannels-light) / 0.5);
+    --mui-mainColorChannels-lightShadow: rgb(#161616);
 }
 
 [data-mui-color-scheme="dark"] {
